# Tiny4Linux

./: .gitignore  Cargo.toml  LICENSE.md  README.md  build.rs  package-lock.json  package.json  renovate.json
.github/: FUNDING.yml
.github/workflows/: pr.yml  release.yml  test.yml
changelogs/: 1.1.0.md  1.2.0.md  1.3.0.md  1.4.0.md  1.4.2.md  1.4.3.md  2.0.0.md  2.0.1.md  2.0.2.md  2.0.3.md  2.1.0.md  2.1.1.md  2.1.2.md  2.2.0.md  2.2.1.md  2.2.2.md
deployment/: README.md
deployment/cli/aur/: .SRCINFO  PKGBUILD
deployment/cli/aur-major/: PKGBUILD
deployment/gui/aur/: .SRCINFO  PKGBUILD
deployment/gui/aur-major/: PKGBUILD
docs/: cli.md
src/: lib.rs  usbio.rs
src/assets/: sources.md
src/cli/: main.rs
src/gui/: main.rs  tiny4linux-dashboard.desktop  tiny4linux-widget.desktop  video_capture.rs
src/gui/styles/: button_non_styled.rs  colors.rs  general_area_style.rs  mod.rs  theme.rs  tooltip_style.rs
src/gui/ui_modules/: button_exposure_mode.rs  button_hdr.rs  button_sleep_wake.rs  button_tracking_mode.rs  button_window_mode_change.rs  current_stats.rs  debug_area.rs  mod.rs  settings_area.rs  window_layout.rs
src/libs/: i18n.rs  mod.rs  usbio.rs
src/libs/camera/: camera.rs  command02.rs  enums.rs  mod.rs  status.rs  transport.rs
src/libs/camera/commands/: ai_mode.rs  exposure_mode.rs  exposure_mode_type.rs  goto_preset_position.rs  hdr_mode.rs  mod.rs  sleep.rs  tracking_speed.rs
src/libs/errors/: enums.rs  mod.rs
src/locales/: ar.json  de.json  en.json  es.json  fr.json  hi.json  it.json  ja.json  tr.json  uk.json  zh-TW.json
src/osc/: main.rs
tests/: cli_integration.rs
