# SPDX-License-Identifier: EUPL-1.2

[package]
license = "EUPL-1.2"
name = "tiny4linux"
version = "2.0.1"
edition = "2024"
description = "A simple GUI control panel for the OBSBot Tiny2 on Linux"
homepage = "https://github.com/OpenFoxes/Tiny4Linux"
repository = "https://github.com/OpenFoxes/Tiny4Linux"
authors = ["Bono Fox <tiny4linux@bono-fox.de>","Constantine Evans <tiny2@mb.costi.net>"]
readme = "README.md"
keywords = ["obsbot", "tiny2", "camera", "webcam", "linux"]
categories = ["hardware-support"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny4linux_assets = { git = "https://github.com/OpenFoxes/Tiny4Linux-Icons", rev = "ba11e78" }
iced = { version = "0.13.0", features = ["image", "tokio"] }
nix = { version = "0.30.0", features = ["ioctl"] }
errno = "0.3.14"
hex = "0.4.3"
glob = "0.3.3"
enum_dispatch = "0.3.13"
thiserror = "2.0.0"
hexdump = "0.1.2"
clap = { version = "4.4.18", features = ["derive"] }
clap_complete = "4.5.59"
dialoguer = { version = "0.12.0", features = ["fuzzy-select"] }

[build-dependencies]
tiny4linux_assets = { git = "https://github.com/OpenFoxes/Tiny4Linux-Icons", rev = "ba11e78" }

[[bin]]
name = "tiny4linux-gui"
path = "src/gui/main.rs"

[[bin]]
name = "tiny4linux-cli"
path = "src/cli/main.rs"
