# SPDX-License-Identifier: EUPL-1.2

[package]
license = "EUPL-1.2"
name = "tiny4linux"
version = "2.1.2"
edition = "2024"
description = "Controls for the OBSBot Tiny2 on Linux"
homepage = "https://github.com/OpenFoxes/Tiny4Linux"
repository = "https://github.com/OpenFoxes/Tiny4Linux"
authors = ["Bono Fox <tiny4linux@bono-fox.de>","Constantine Evans <tiny2@mb.costi.net>"]
readme = "README.md"
keywords = ["obsbot", "tiny2", "camera", "webcam", "linux"]
categories = ["hardware-support"]

[features]
gui = ["iced", "iced_font_awesome", "tiny4linux_assets"]
cli = ["clap", "clap_complete", "dialoguer"]

[dependencies]
tiny4linux_assets = { git = "https://github.com/OpenFoxes/Tiny4Linux-Icons", rev = "57c10f204b75f1c61087fd9568814ee52d0ec036", optional = true }
iced = { version = "0.13.0", features = ["image", "tokio"], optional = true }
iced_font_awesome = { version = "0.3.0", optional = true }
nix = { version = "0.30.0", features = ["ioctl"] }
bon = "3.8.1"
errno = "0.3.14"
hex = "0.4.3"
glob = "0.3.3"
enum_dispatch = "0.3.13"
thiserror = "2.0.0"
hexdump = "0.1.2"
clap = { version = "4.4.18", features = ["derive"], optional = true }
clap_complete = { version = "4.5.59", optional = true }
dialoguer = { version = "0.12.0", features = ["fuzzy-select"], optional = true }

[build-dependencies]
tiny4linux_assets = { git = "https://github.com/OpenFoxes/Tiny4Linux-Icons", rev = "57c10f204b75f1c61087fd9568814ee52d0ec036", optional = true }

[dev-dependencies]
test-case = "3.3.1"
assertables = "9.8.2"

[[bin]]
name = "tiny4linux-gui"
path = "src/gui/main.rs"
required-features = ["gui"]

[[bin]]
name = "tiny4linux-cli"
path = "src/cli/main.rs"
required-features = ["cli"]
